2009-10-15  Zan Dobersek  <zandobersek@gmail.com>

        Reviewed by Gustavo Noronha.

        Enable Web Sockets support when running layout tests.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):

2009-10-15  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Need to initialize event.button.button, since in most cases a
        button number is not passed as an argument.

        * DumpRenderTree/gtk/EventSender.cpp:
        (mouseDownCallback):
        (mouseUpCallback):

2009-10-15  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. More SDK fixes for Mac, make sure we use the SDK corresponding to
        the OS if none was explicitly set.

        * wx/build/settings.py:

2009-10-14  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: enable developers extras within inspector layout tests.

        https://bugs.webkit.org/show_bug.cgi?id=30014

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::showWebInspector):
        (LayoutTestController::closeWebInspector):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::showWebInspector):
        (LayoutTestController::closeWebInspector):

2009-10-14  José Millán Soto  <jmillan@igalia.com>

        Reviewed by Jan Alonzo.

        GtkLauncher is using a deprecated signal
        https://bugs.webkit.org/show_bug.cgi?id=30364

        Modified GtkLauncher to use notify::title signal instead of
        deprecated title-changed signal

        * GtkLauncher/main.c:
        (notify_title_cb):
        (create_browser):

2009-10-14  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        Don't set the history delegate on new windows that are opened during a test, as the history delegate:
        1 - Disables WebHistory
        2 - Doesn't make sense in that context anyway.
